test/conformance/chainsaw/validating-policies/context/globalreference/gctxentry.yaml
apiVersion: kyverno.io/v2alpha1
kind: GlobalContextEntry
metadata:
  name: gctxentry-apicall-correct
spec:
  apiCall:
    urlPath: "/apis/apps/v1/namespaces/test-globalcontext-apicall-correct/deployments"
    refreshInterval: 1h
  projections:
    - name: test-globalcontext-apicall-correct-projections_deployment_count
      jmesPath: "items | length(@)"
