test/conformance/chainsaw/validating-policies/context/globalreference/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: apicall-correct
spec:
  steps:
  - try:
    - apply:
        file: namespace.yaml
    - apply:
        file: main-deployment.yaml
    - apply:
        file: gctxentry.yaml
    - sleep:
        duration: 3s
  - name: create policy
    use:
      template: ../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait-validating-policy-ready
    use:
      template: ../../../_step-templates/validating-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: cpol-apicall-correct
  - try:
    - apply:
        file: new-deployment.yaml
    - assert:
        file: new-deployment-exists.yaml
